fix: login behavior
